# flask-scratch

./: .travis.yml  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
flask_scratch/: __init__.py  app.py  routes.py
tests/: test_app.py  test_hello.py
