[tool.poetry]
name = "flask-scratch"
version = "0.0.2"
description = ""
authors = ["Matt Pladna <pladdypants@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flask = ">=2.3.2,<2.4.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8"
codecov = "^2.0"
pdoc3 = "^0.7.2"
pytest = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
